[gd_scene load_steps=10 format=3 uid="uid://crnpgfffxreu"]

[ext_resource type="Script" path="res://Scripts/Editor.gd" id="1_megtk"]
[ext_resource type="ArrayMesh" uid="uid://bmiseymht8ngi" path="res://Assets/TrackEditor/TrackStraight.obj" id="2_clvs6"]
[ext_resource type="PackedScene" uid="uid://c8ng83e0upg4t" path="res://Scenes/Freecam.tscn" id="2_v856w"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_w40u7"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_dkeik"]
sky_material = SubResource("ProceduralSkyMaterial_w40u7")

[sub_resource type="Environment" id="Environment_6xua7"]
background_mode = 2
sky = SubResource("Sky_dkeik")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_486vj"]
transparency = 1
albedo_color = Color(1, 1, 0.592157, 0.172549)

[sub_resource type="BoxMesh" id="BoxMesh_j07nk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_alwub"]

[node name="Editor" type="Node3D"]
script = ExtResource("1_megtk")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6xua7")

[node name="Freecam" parent="." instance=ExtResource("2_v856w")]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.68456, 0, 0)
mesh = ExtResource("2_clvs6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ShowHideButton" type="Button" parent="CanvasLayer"]
offset_right = 8.0
offset_bottom = 8.0
text = "Hide Blocks"

[node name="ItemList" type="ItemList" parent="CanvasLayer"]
offset_left = 1.0
offset_top = 34.0
offset_right = 194.0
offset_bottom = 465.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="SaveButton" type="Button" parent="CanvasLayer"]
offset_left = 239.0
offset_right = 283.0
offset_bottom = 31.0
text = "Save"

[node name="SaveAsButton" type="Button" parent="CanvasLayer"]
offset_left = 124.0
offset_right = 191.0
offset_bottom = 31.0
text = "Set Save Path"

[node name="SaveAsDialog" type="FileDialog" parent="CanvasLayer"]
title = "Save As"
position = Vector2i(100, 100)
size = Vector2i(1000, 500)
ok_button_text = "Save"

[node name="LoadButton" type="Button" parent="CanvasLayer"]
offset_left = 301.0
offset_right = 347.0
offset_bottom = 31.0
text = "Load"

[node name="LoadDialog" type="ConfirmationDialog" parent="CanvasLayer"]
title = "Load File?"
size = Vector2i(413, 106)
ok_button_text = "Load File"
dialog_text = "Loading a level will discard any changes to this one.
Proceed?"

[node name="LoadFileSelectorDialog" type="FileDialog" parent="CanvasLayer"]
title = "Open a File"
position = Vector2i(100, 100)
size = Vector2i(1000, 500)
ok_button_text = "Open"
file_mode = 0

[node name="AddedBlocksRoot" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="Plane" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(10, 0, 0, 0, 0.1, 0, 0, 0, 10, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_486vj")
mesh = SubResource("BoxMesh_j07nk")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(10, 0, 0, 0, 0.1, 0, 0, 0, 10, 0, 2, 0)
shape = SubResource("BoxShape3D_alwub")

[connection signal="pressed" from="CanvasLayer/ShowHideButton" to="." method="_on_show_hide_button_pressed"]
[connection signal="item_selected" from="CanvasLayer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="CanvasLayer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SaveAsButton" to="." method="_on_save_path_button_pressed"]
[connection signal="file_selected" from="CanvasLayer/SaveAsDialog" to="." method="_on_save_as_dialog_file_selected"]
[connection signal="pressed" from="CanvasLayer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="confirmed" from="CanvasLayer/LoadDialog" to="." method="_on_load_dialog_confirmed"]
[connection signal="file_selected" from="CanvasLayer/LoadFileSelectorDialog" to="." method="_on_load_file_selector_dialog_file_selected"]
